ADJUST: enhance service pricing calculation by integrating pricing rules and improving unit price determination